<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <TextView
        android:id="@+id/signUpLabel"
        android:layout_width="173dp"
        android:layout_height="76dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:gravity="center_vertical"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical|start"
        android:paddingLeft="15dp"
        android:text="Name"
        android:textColor="#878787"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLabel"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="enter a name"
        android:inputType="text"
        android:textColor="@color/colorPrimaryWhite"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLabel"
        app:layout_constraintVertical_bias="0.775" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="Email"
        android:textColor="#878787"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="example@mail.com"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryWhite"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/passwordLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:text="Password"
        android:textColor="#878787"
        android:textColorHint="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordLogIn"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="enter a password..."
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryWhite"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="176dp"
        android:layout_height="39dp"
        android:background="@drawable/btn"
        android:onClick="onClickSignUp"
        android:text="CREATE ACCOUNT"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogIn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:onClick="displayLogInPage"
        android:text="Already a member?Log in"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="italic"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>